--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "rjsf-issues",
+  "name": "react-jsonschema-form-playground",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -7,10 +7,10 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.9",
     "@mui/material": "^5.14.10",
-    "@rjsf/core": "5.14.2",
-    "@rjsf/mui": "5.14.2",
-    "@rjsf/utils": "5.14.2",
-    "@rjsf/validator-ajv8": "5.14.2",
+    "@rjsf/core": "5.15.1",
+    "@rjsf/mui": "5.15.1",
+    "@rjsf/utils": "5.15.1",
+    "@rjsf/validator-ajv8": "5.15.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
