--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.9",
     "@mui/material": "^5.14.10",
-    "@rjsf/core": "5.15.1",
-    "@rjsf/mui": "5.15.1",
-    "@rjsf/utils": "5.15.1",
-    "@rjsf/validator-ajv8": "5.15.1",
+    "@rjsf/core": "5.16.1",
+    "@rjsf/mui": "5.16.1",
+    "@rjsf/utils": "5.16.1",
+    "@rjsf/validator-ajv8": "5.16.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -24,6 +24,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "copy-folder-util": "^1.1.3",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
@@ -31,7 +32,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "postinstall": "copy-folder local_node_modules/@rjsf/validator-ajv8/ node_modules/@rjsf/validator-ajv8/"
   },
   "eslintConfig": {
     "extends": [
